catkin_ws/logs/iq_gnc/build.make.065.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_pos_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:47:4: error: expected ‘}’ before ‘else’
   47 |  } else {
      |    ^~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:32:42: note: to match this ‘{’
   32 |  if (currPos_z <= 0.05 && !takeoff_flag) {
      |                                          ^
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1949: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
